final website update

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="slide">
           <img src="images/assem.png" alt="image01"> </div>
 					<div class="slide">
-	          <img src="images/arm.jpg" alt="image02"> </div>
+	          <img src="images/arm.png" alt="image02"> </div>
 						<div class="slide">
 						<img src="images/head.png" alt="image0"> </div>
         <!--background slide show end-->
@@ -205,23 +205,43 @@
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
             	<h4>Prototyping</h4>
                 <h5>Initial design concepts</h5>
-                <p>We finally got to testing some preliminary components. We created an acrylic arm on a stand, operated by a solenoid, and were able to prove both our punching design and control method. One of the insights we obtained was which pieces to make out of aluminum instead of plastic (the ones which broke in the prototype...). We took this prototype design and optimized it for the type of punch we desired, eventually settling on final geometries for the linkages.</p>
-									<img src="images/prelimassem.jpg" alt="">
+                <p>We finally got to testing some preliminary components. We created an acrylic arm on a stand, operated by a solenoid, and were able to prove both our punching design and control method. The cad of the demo is shown below. One of the insights we obtained was which pieces to make out of aluminum instead of plastic (the ones which broke in the prototype...). We took this prototype design and optimized it for the type of punch we desired, eventually settling on final geometries for the linkages.</p>
+									<center><img src="images/protocad.JPG" alt=""height="380" width="380">
+
+									<img src="images/prelimassem.jpg" alt=""height="380" width="380"></center>
+
 						</div>
         </div>
-        <div class="row media">
+				<div class="row media">
         	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
             	<div class="expertiesico">
-								March
+								<h4>March</h4>
 							</div>
             </div>
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
             	<h4>CAD</h4>
                 <h5>Refined Design</h5>
-                <p>After deciding on final parameters of control and design, we moved on to CADing a final system. Below is a few differnt views of the final product! Not pictured: the rat's nest of wires that were then very carefully organized and color coded by Joe and Niki. </p>
-								<img src="images/assem.png">
+                <p>After deciding on final parameters of control and design, we moved on to CADing a final system. Below is a few differnt views of the final product and the detailed drawngs of assmblies and parts to be 3D printed and machined! Not pictured: the rat's nest of wires that were then very carefully organized and color coded by Joe and Niki. </p>
+								<center><img src="images/assem.png"><img src="images/left_arm_explode.jpg"height="300" width="380">     <img src="images/shoulder pivot.JPG"height="300" width="380"></center>
 						</div>
         </div>
+				<div class="row media">
+					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+							<div class="expertiesico">
+								<h4>May</h4>
+							</div>
+						</div>
+					<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
+							<h4>Play</h4>
+								<h5>Assembly and Programming</h5>
+								<p>With a refined CAD and a wiring harness, we were able to get the entire project manufactured, assembled, and tested. After many sleepless nights, we are able to pit two people against eachother in a game of Rock 'em! Seen below is a video of the red robot being beaten up by the blue during testing.</p>
+								<center><video width="320" height="440" controls>
+								<source src="images/blue_test.mp4" type="video/mp4">
+								<source src="images/blue_test.ogg" type="video/ogg">
+									Your browser does not support the video tag.
+								</video></center>
+						</div>
+				</div>
     </div>
   </section>
   <!--Work Experties end -->
@@ -258,7 +278,7 @@
             <h3>Check out some of our (relatively recent) documentation</h3>
         </div>
 				<center>
-				<p><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=1tQ2PDKxzi1hl6jVZY-inTytLnyBGzraAqj7L1bEp5Lk">Design Review</a><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=1kLgCInodisrtss0fAEAcWktrfnYWHOHTlRW8jVbM1tE">Technical Review</a></p></center>
+				<p><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=1tQ2PDKxzi1hl6jVZY-inTytLnyBGzraAqj7L1bEp5Lk">Final Report</a><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=1kLgCInodisrtss0fAEAcWktrfnYWHOHTlRW8jVbM1tE">Technical Review</a><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=17xeT9SrOdOeFtC-fZXZK0zi3_QAlSeCe">Expo Slideshow</a></p></center>
 
     </div>
 
