--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <h3>Check out some of our (relatively recent) documentation</h3>
         </div>
 				<center>
-				<p><a role="button" class="btn btn-primary btn-lg" href="file:///C:/Users/Owner/Downloads/Final%20Report.pdf">Final Report</a><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=1kLgCInodisrtss0fAEAcWktrfnYWHOHTlRW8jVbM1tE">Technical Review</a><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=17xeT9SrOdOeFtC-fZXZK0zi3_QAlSeCe">Expo Slideshow</a></p></center>
+				<p><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/file/d/1rbOiDNRmf61jKU6UvacVVCFbPmuMq3Ly/view?usp=sharing">Final Report</a><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=1kLgCInodisrtss0fAEAcWktrfnYWHOHTlRW8jVbM1tE">Technical Review</a><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=17xeT9SrOdOeFtC-fZXZK0zi3_QAlSeCe">Expo Slideshow</a></p></center>
 
     </div>
 
